
--Fixed CANNOT JOIN message for tournaments when you can't afford it
  (thanks ..).

--Fixed crash when hitting ENTER to commit while still dragging a slider with
  the mouse (releasing the mouse made the COMMIT button reappear) 
  (thanks Anna G).

--Improved tool tip on tournament button to make it clear that you can read the
  information before paying the entry fee (thanks Matt K).




Version 26     Live Server Fixes

--Improved profit ratio and won/lost leaderboard formula to be less biased
  toward high stakes players who have not played enough games (thanks ..).

--Added a minProfit setting for tournaments to limit players with low
  tournament profits (like 0) from getting prizes.

--Fixed bug in update of past tournament date stamps triggered by current
  tournament match buy-in.

--Fixed bug in links to tournament reports in admin interface.

--Added automatic daily tournaments.

--tournament_report and prize preview with no code name now shows current
  tournament.

--Fixed so that everyone gets their entry fee back if no one has high enough
  profit to receive a prize.

--Added list of upcoming tournaments.

--Fixed prize payouts when no one receives a prize.

--Fixed payouts and future tournament list when a manually-scheduled
  tournament interrupts the auto-tournaments.  

--Added a rising penalty for leaving as ante rises.





Version 26     2015-May-25

--Disabled experimental suited game mode.




Version 25     Live Server Fixes

--Stat that counts how many experimental-mode games are played.




Version 25     2015-May-18

--Added experimental 1-9 suited game mode.




Version 24     2015-May-15

--Fixed so that Cabal points symbol not displayed with bad point value when
  depositing into exiting account.

--Changed to clear payment information from client after each payment or when
  user backs out of deposit screen (thanks Chris H).

--Support for list of languages in language.txt where the top language is the